@@ -1508,7 +1508,7 @@ AC_DEFUN([AC_CHECK_ENABLE_NIMBUS_GENERATION],
     ENABLE_NIMBUS_GENERATION="${enableval}"
   ],
   [
-    ENABLE_NIMBUS_GENERATION=yes
+    ENABLE_NIMBUS_GENERATION=no
   ])
 
   AC_MSG_RESULT(${ENABLE_NIMBUS_GENERATION})
